[gd_scene load_steps=51 format=2]

[ext_resource path="res://Catch_the_rhythm/SecondLevel/ost/Marshmello - FLY.mp3" type="AudioStream" id=1]
[ext_resource path="res://Catch_the_rhythm/BaseScene/Conductor.gd" type="Script" id=2]
[ext_resource path="res://Catch_the_rhythm/SecondLevel/SecondLevel.gd" type="Script" id=3]
[ext_resource path="res://Catch_the_rhythm/platform/MusicPlatform.tscn" type="PackedScene" id=4]
[ext_resource path="res://Catch_the_rhythm/BaseScene/FPS.gd" type="Script" id=5]
[ext_resource path="res://Catch_the_rhythm/BaseScene/Stats.gd" type="Script" id=6]
[ext_resource path="res://Catch_the_rhythm/BaseScene/AudioCircle2.gd" type="Script" id=7]
[ext_resource path="res://Catch_the_rhythm/BaseScene/NoteDestroy.gd" type="Script" id=8]
[ext_resource path="res://Catch_the_rhythm/BaseScene/PauseScreen.gd" type="Script" id=10]
[ext_resource path="res://BaseMenu/menu_theme.tres" type="Theme" id=11]
[ext_resource path="res://BaseMenu/slider/arrow_hold.png" type="Texture" id=12]
[ext_resource path="res://BaseMenu/checkbox/unchecked.png" type="Texture" id=13]
[ext_resource path="res://BaseMenu/slider/slider_back.png" type="Texture" id=14]
[ext_resource path="res://BaseMenu/checkbox/checked.png" type="Texture" id=15]
[ext_resource path="res://BaseMenu/slider/arrow.png" type="Texture" id=16]
[ext_resource path="res://BaseMenu/slider/arrow_pressed.png" type="Texture" id=17]
[ext_resource path="res://fonts/menu_buttons_font.tres" type="DynamicFont" id=18]
[ext_resource path="res://Catch_the_rhythm/winscreen_font.tres" type="DynamicFont" id=19]
[ext_resource path="res://Catch_the_rhythm/BaseScene/WinScreen.gd" type="Script" id=20]
[ext_resource path="res://Catch_the_rhythm/BaseScene/NoteParticles.gd" type="Script" id=21]
[ext_resource path="res://fonts/josefin-sans.regular.ttf" type="DynamicFontData" id=22]
[ext_resource path="res://Catch_the_rhythm/Effects/floaty_64.png" type="Texture" id=23]
[ext_resource path="res://Catch_the_rhythm/BaseScene/Glowing.gd" type="Script" id=24]
[ext_resource path="res://Catch_the_rhythm/BaseScene/LeaderBoardsSaver.gd" type="Script" id=25]
[ext_resource path="res://Catch_the_rhythm/SecondLevel/video/720.webm" type="VideoStream" id=26]
[ext_resource path="res://Catch_the_rhythm/SecondLevel/BackgroundVideo.gd" type="Script" id=27]

[sub_resource type="Environment" id=1]
background_mode = 4
glow_enabled = true
glow_intensity = 0.11
glow_blend_mode = 1
glow_hdr_threshold = 1.5

[sub_resource type="CanvasItemMaterial" id=23]
blend_mode = 1
particles_animation = true
particles_anim_h_frames = 7
particles_anim_v_frames = 7
particles_anim_loop = false

[sub_resource type="Gradient" id=24]
offsets = PoolRealArray( 0, 0.289474, 0.597744, 1 )
colors = PoolColorArray( 0.180392, 0, 0.443137, 1, 0.529412, 0, 0.639216, 1, 0.196078, 1, 0.980392, 1, 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=25]
gradient = SubResource( 24 )

[sub_resource type="ParticlesMaterial" id=26]
emission_shape = 2
emission_box_extents = Vector3( 100, 1, 1 )
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, -100, 0 )
initial_velocity = 50.0
angular_velocity = 100.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 50.0
angle = 360.0
color_ramp = SubResource( 25 )
anim_speed = 0.7

[sub_resource type="DynamicFont" id=21]
size = 100
font_data = ExtResource( 22 )

[sub_resource type="DynamicFont" id=22]
size = 100
font_data = ExtResource( 22 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 1000, 10 )

[sub_resource type="Animation" id=18]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=19]
resource_name = "ShowWinscreen"
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxTexture" id=15]
texture = ExtResource( 14 )
region_rect = Rect2( 0, 0, 400, 50 )

[sub_resource type="StyleBoxEmpty" id=16]

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_right = 4
border_width_bottom = 4

[sub_resource type="ImageTexture" id=10]

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.227451, 0.00784314, 0.364706, 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.172549, 0.027451, 0.266667, 0.894118 )

[sub_resource type="Theme" id=20]
default_font = ExtResource( 19 )
Button/styles/focus = SubResource( 7 )
Button/styles/hover = SubResource( 6 )
Button/styles/normal = SubResource( 4 )
Button/styles/pressed = SubResource( 8 )
CheckBox/fonts/font = ExtResource( 18 )
CheckBox/icons/checked = ExtResource( 15 )
CheckBox/icons/unchecked = ExtResource( 13 )
CheckBox/styles/hover = SubResource( 11 )
HSlider/icons/grabber = ExtResource( 16 )
HSlider/icons/grabber_disabled = ExtResource( 12 )
HSlider/icons/grabber_highlight = ExtResource( 17 )
HSlider/styles/grabber_area = SubResource( 13 )
HSlider/styles/grabber_area_highlight = SubResource( 14 )
HSlider/styles/slider = SubResource( 15 )
LineEdit/constants/minimum_spaces = 7
LineEdit/styles/focus = SubResource( 16 )
LineEdit/styles/normal = SubResource( 17 )
OptionButton/icons/arrow = SubResource( 10 )
OptionButton/styles/disabled = SubResource( 12 )
PopupMenu/styles/panel = SubResource( 9 )

[node name="BaseRhythm" type="Node2D"]
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="VideoPlayer" type="VideoPlayer" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
mouse_filter = 2
stream = ExtResource( 26 )
autoplay = true
script = ExtResource( 27 )

[node name="Stats" type="Node" parent="."]
script = ExtResource( 6 )

[node name="Conductor" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
mix_target = 2
bus = "RhythmMusic"
script = ExtResource( 2 )
bpm = 135

[node name="StartTimer" type="Timer" parent="Conductor"]
one_shot = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="FPS" type="Label" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 14.0
script = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="AudioCircle2" type="Node2D" parent="."]
modulate = Color( 1.5, 1.5, 1.5, 1 )
position = Vector2( 960, 540 )
script = ExtResource( 7 )
__meta__ = {
"_edit_lock_": true
}

[node name="MusicPlatform" parent="." instance=ExtResource( 4 )]
position = Vector2( 80, 993 )

[node name="Glowing" type="Particles2D" parent="MusicPlatform"]
material = SubResource( 23 )
amount = 1
explosiveness = 0.07
local_coords = false
process_material = SubResource( 26 )
texture = ExtResource( 23 )
script = ExtResource( 24 )

[node name="Catched" type="Label" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 21 )
text = "Catched: "

[node name="Missed" type="Label" parent="."]
visible = false
margin_top = 19.0
margin_right = 54.0
margin_bottom = 33.0
text = "Missed: "

[node name="Score" type="Label" parent="."]
margin_top = 36.0
margin_right = 54.0
margin_bottom = 50.0
custom_fonts/font = SubResource( 22 )
text = "Score: "

[node name="NoteDestroy" type="Area2D" parent="."]
position = Vector2( 988, 1200 )
script = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="NoteDestroy"]
shape = SubResource( 2 )

[node name="HUD" type="CanvasLayer" parent="."]

[node name="PauseScreen" type="Control" parent="HUD"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -774, 324 )
script = ExtResource( 10 )

[node name="ColorRect" type="ColorRect" parent="HUD/PauseScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.760784 )
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="HUD/PauseScreen"]
anchor_left = 0.5
anchor_top = 0.147
anchor_right = 0.5
anchor_bottom = 0.147
margin_left = -95.5
margin_right = 95.5
margin_bottom = 77.0
theme = ExtResource( 11 )
text = "PAUSED"
__meta__ = {
"_edit_lock_": true
}

[node name="CenterContainer" type="CenterContainer" parent="HUD/PauseScreen"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/PauseScreen/CenterContainer"]
margin_left = 760.0
margin_top = 434.0
margin_right = 1160.0
margin_bottom = 646.0

[node name="ResumeButton" type="Button" parent="HUD/PauseScreen/CenterContainer/VBoxContainer"]
margin_right = 400.0
margin_bottom = 77.0
theme = ExtResource( 11 )
text = "Resume"

[node name="MenuButton" type="Button" parent="HUD/PauseScreen/CenterContainer/VBoxContainer"]
margin_top = 81.0
margin_right = 400.0
margin_bottom = 158.0
theme = ExtResource( 11 )
text = "menu"

[node name="VolumeSlider" type="HSlider" parent="HUD/PauseScreen/CenterContainer/VBoxContainer"]
margin_top = 162.0
margin_right = 400.0
margin_bottom = 212.0
size_flags_vertical = 1
theme = ExtResource( 11 )
max_value = 1.0
step = 0.001

[node name="WinScreen" type="Control" parent="HUD"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 20 )

[node name="ColorRect" type="ColorRect" parent="HUD/WinScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="WinScreenPlayer" type="AnimationPlayer" parent="HUD/WinScreen"]
anims/RESET = SubResource( 18 )
anims/ShowWinscreen = SubResource( 19 )

[node name="CenterContainer" type="CenterContainer" parent="HUD/WinScreen"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/WinScreen/CenterContainer"]
margin_left = 276.0
margin_top = 199.0
margin_right = 1643.0
margin_bottom = 881.0
custom_constants/separation = 113

[node name="Label" type="Label" parent="HUD/WinScreen/CenterContainer/VBoxContainer"]
margin_right = 1367.0
margin_bottom = 80.0
custom_fonts/font = ExtResource( 19 )
text = "Level complete!"
align = 1

[node name="GridContainer" type="GridContainer" parent="HUD/WinScreen/CenterContainer/VBoxContainer"]
margin_top = 193.0
margin_right = 1367.0
margin_bottom = 405.0
custom_constants/vseparation = 52
custom_constants/hseparation = 267
columns = 2

[node name="Score" type="Label" parent="HUD/WinScreen/CenterContainer/VBoxContainer/GridContainer"]
margin_right = 550.0
margin_bottom = 80.0
rect_min_size = Vector2( 550, 80 )
size_flags_vertical = 1
custom_fonts/font = ExtResource( 19 )
text = "SCORE"

[node name="Catched" type="Label" parent="HUD/WinScreen/CenterContainer/VBoxContainer/GridContainer"]
margin_left = 817.0
margin_right = 1367.0
margin_bottom = 80.0
rect_min_size = Vector2( 550, 80 )
size_flags_vertical = 1
custom_fonts/font = ExtResource( 19 )
text = "CATCHED"

[node name="Missed" type="Label" parent="HUD/WinScreen/CenterContainer/VBoxContainer/GridContainer"]
margin_top = 132.0
margin_right = 550.0
margin_bottom = 212.0
rect_min_size = Vector2( 550, 80 )
size_flags_vertical = 1
custom_fonts/font = ExtResource( 19 )
text = "MISSED"

[node name="MaxCombo" type="Label" parent="HUD/WinScreen/CenterContainer/VBoxContainer/GridContainer"]
margin_left = 817.0
margin_top = 132.0
margin_right = 1367.0
margin_bottom = 212.0
rect_min_size = Vector2( 550, 80 )
size_flags_vertical = 1
custom_fonts/font = ExtResource( 19 )
text = "MAX_COMBO"

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/WinScreen/CenterContainer/VBoxContainer"]
margin_top = 518.0
margin_right = 1367.0
margin_bottom = 682.0

[node name="BackToMenu" type="Button" parent="HUD/WinScreen/CenterContainer/VBoxContainer/VBoxContainer"]
margin_right = 1367.0
margin_bottom = 80.0
rect_min_size = Vector2( 400, 0 )
size_flags_horizontal = 4
size_flags_vertical = 4
theme = SubResource( 20 )
text = "Menu"

[node name="Retry" type="Button" parent="HUD/WinScreen/CenterContainer/VBoxContainer/VBoxContainer"]
margin_top = 84.0
margin_right = 1367.0
margin_bottom = 164.0
rect_min_size = Vector2( 400, 0 )
size_flags_horizontal = 4
size_flags_vertical = 4
theme = SubResource( 20 )
text = "Retry"

[node name="NoteParticles" type="Node" parent="."]
script = ExtResource( 21 )

[node name="LeaderBoardsSaver" type="Node" parent="."]
script = ExtResource( 25 )

[connection signal="finished" from="VideoPlayer" to="VideoPlayer" method="_on_VideoPlayer_finished"]
[connection signal="beat" from="Conductor" to="." method="_on_Conductor_beat"]
[connection signal="measure" from="Conductor" to="." method="_on_Conductor_measure"]
[connection signal="timeout" from="Conductor/StartTimer" to="Conductor" method="_on_StartTimer_timeout"]
[connection signal="note_catched" from="MusicPlatform" to="." method="_on_MusicPlatform_note_catched"]
[connection signal="note_catched" from="MusicPlatform" to="MusicPlatform/Glowing" method="_on_MusicPlatform_note_catched"]
[connection signal="area_entered" from="NoteDestroy" to="NoteDestroy" method="_on_NoteDestroy_area_entered"]
[connection signal="pressed" from="HUD/PauseScreen/CenterContainer/VBoxContainer/ResumeButton" to="HUD/PauseScreen" method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="HUD/PauseScreen/CenterContainer/VBoxContainer/MenuButton" to="HUD/PauseScreen" method="_on_MenuButton_pressed"]
[connection signal="value_changed" from="HUD/PauseScreen/CenterContainer/VBoxContainer/VolumeSlider" to="HUD/PauseScreen" method="_on_VolumeSlider_value_changed"]
[connection signal="pressed" from="HUD/WinScreen/CenterContainer/VBoxContainer/VBoxContainer/BackToMenu" to="HUD/WinScreen" method="_on_BackToMenu_pressed"]
[connection signal="pressed" from="HUD/WinScreen/CenterContainer/VBoxContainer/VBoxContainer/Retry" to="HUD/WinScreen" method="_on_Retry_pressed"]
